# EmpresasX

./: .gitignore  README.md  main.py  pyproject.toml
backend/: db_init.py  main.py
frontend/: chat_app.py
tests/: test_api.py
