[project]
name = "empresasx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.0",
    "duckdb-extension-fts>=1.3.0",
    "duckdb-extension-vss>=1.3.0",
    "duckdb-extensions>=1.3.0",
    "faker>=37.3.0",
    "fastapi>=0.115.12",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydantic-ai>=0.2.12",
    "pytest>=8.3.5",
    "streamlit>=1.45.1",
    "tabulate>=0.9.0",
    "tqdn>=0.2.1",
    "uvicorn[standard]>=0.34.3",
]
